# p1-pink-fluffy-unicorns

./: (0) unicorn_boolean_mask.ipynb  .gitignore  LICENSE  Qatar-6 b.txt  README.md  TrES-2 b.txt  TrES-5 b.txt  WASP-2 b.txt  WASP-52 b.txt  assigment_notes.yaml  basic_model_transit.ipynb  cubic_interp.py  fitting_test.ipynb  fitting_test_ignore.ipynb  model_fitting.ipynb  model_fitting.py  model_fitting_ignore.py  photometry_simulation.py  planet_atmosphere_extinction.py  pyproject.toml  smooth_plot.py  smoothening.py  unicorn_transit.ipynb
assets/: density_profile_earth.npz  density_profile_jup.npz  opacity_data.npz  opacity_data_earth.npz  opacity_data_jupiter.npz  opacity_jup_data.npz
assets/exoplanet_data/: Qatar-6 b.txt  TrES-2 b.txt  TrES-5 b.txt  WASP-2 b.txt  WASP-52 b.txt
assets/fitted_params/: Qatar-6 b_params.npz  TrES-2 b_params.npz  TrES-5 b_params.npz  WASP-2 b_params.npz  WASP-52 b_params.npz
assets/interp_data/: Qatar-6 b_interp.txt  Qatar-6 b_interpolated.txt  TrES-2 b_interp.txt  TrES-2 b_interpolated.txt  TrES-5 b_interp.txt  TrES-5 b_interpolated.txt  WASP-2 b_interp.txt  WASP-2 b_interpolated.txt  WASP-52 b_interp.txt  WASP-52 b_interpolated.txt
assets/unicorn/: spaceship.tif  spaceship_boolean_mask.npz  unicorn_boolean_mask.npz  (+1 more)
astr513_pink_fluffy_unicorns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc/: assignment_notes.yaml  doc.md  requirements.txt
pfu_transit/: cubic_interp.py  mask_generation.py  photometry_simulation.py  planet_atmosphere_extinction.py  saving_interp_data.py  smoothening.py
(+20 files in other folders)
